[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/Charactertest.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/Unit.gd" type="Script" id=2]
[ext_resource path="res://UnitSM.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.0341333
height = 0.168167

[sub_resource type="Animation" id=2]
resource_name = "ATTACK"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.4, 0 ), Vector3( 0, 0.4, 0 ), Vector3( 0, 0.4, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "deal_damage"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.4, 0 ) ]
}

[sub_resource type="BoxShape" id=4]
extents = Vector3( 2.15882, 1, 2.0952 )

[node name="Unit" type="KinematicBody" groups=[
"unit",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.4, 0 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 24, 24 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/ATTACK = SubResource( 2 )
anims/IDLE = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="UnitSM" parent="." instance=ExtResource( 3 )]

[node name="Area" type="Area" parent="."]
collision_layer = 2
collision_mask = 2147483650

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0.298833, 0 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="AnimationPlayer" to="UnitSM" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
